--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.5.10"
   },
   "engines": {
     "node": "4.5.0"
-  },
-  "devDependencies": {
-    "mongoose": "^4.5.10"
   }
 }
