--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "mongoose": "^4.5.10"
+    "mongoose": "^4.5.10",
+    "pug": "^2.0.0-beta5"
   },
   "engines": {
     "node": "4.5.0"
